--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidMVVMPoC</string>
     <string name="button">Button</string>
+    <string name="name">Name</string>
 </resources>
